--- a/index.css
+++ b/index.css
@@ -647,23 +647,24 @@ nav ul li a {
 
 
 
- /* popular section start */
+/* popular section start */
 
- .popular{
+.popular {
     width: 100%;
-    background-color: rgb(247,245,241);
+    background-color: rgb(247, 245, 241);
     padding: 50px;
     display: flex;
     flex-direction: column;
     gap: 40px;
- }
+}
 
- .popular h1{
+.popular h1 {
     text-align: center;
     font-size: 40px;
     letter-spacing: 1.5px;
- }
- .popular-container{
+}
+
+.popular-container {
     width: 100%;
     height: auto;
     display: grid;
@@ -671,55 +672,110 @@ nav ul li a {
     gap: 5px;
 }
 
-.popular-container .popular-item{
+.popular-container .popular-item {
     display: flex;
     flex-direction: column;
     overflow: auto;
     border: 1px solid #ddd;
 }
 
-.popular-container .popular-item:hover{
-border: 1px solid black;
+.popular-container .popular-item:hover {
+    border: 1px solid black;
 }
-.popular-item .popular-title{
+
+.popular-item .popular-title {
     width: 100%;
-    font-size: 18px; 
+    font-size: 18px;
     letter-spacing: 1.2px;
     word-spacing: 1.2px;
     font-weight: bold;
-    text-align: start; 
+    text-align: start;
     padding: 10px 20px;
     background-color: white;
 }
 
-.popular-item .popular-image{
+.popular-item .popular-image {
     width: 100%;
     height: 340px;
     overflow: hidden;
 }
 
-.popular-item .popular-image img{
-    width: 100%; 
-    height:  auto;
+.popular-item .popular-image img {
+    width: 100%;
+    height: auto;
     object-fit: cover;
 }
 
 .popular-item .popular-browse {
-    text-align: center; 
-    padding: 10px; 
+    text-align: center;
+    padding: 10px;
     background-color: black;
     color: white;
     letter-spacing: 1.2px;
     word-spacing: 1.2px;
 }
 
-.popular-item .popular-browse:hover{
+
+.popular-item .popular-browse:hover {
     background-color: rgb(193, 219, 66);
 }
- 
+
+
 /* popular section end */
 
 
+
+/* slider title section  start*/
+#slider-title {
+    width: 100%;
+    height: 400px;
+    padding: 42px;
+    background-color: rgb(247, 245, 241);
+
+}
+
+.slider-item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
+
+.slider-text-div {
+    width: 600px;
+    height: auto;
+    text-align: center;
+}
+
+#slider-text {
+    font-size: 35px;
+}
+
+.slider-text-div i {
+    transform: translateY(-15px);
+}
+
+.slider-img-div {
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+#slider-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/* slider title section  end*/
 
 /* Small screens (max-width: 767px) */
 @media screen and (max-width: 767px) {
@@ -811,20 +867,28 @@ border: 1px solid black;
     }
 
     .popular-container {
-        grid-template-columns: repeat(2, 1fr) !important; /* Add !important to ensure it overrides other styles */
+        grid-template-columns: repeat(2, 1fr) !important;
+        /* Add !important to ensure it overrides other styles */
     }
 
-    .popular-item .popular-image{
+    .popular-item .popular-image {
         height: 250px;
     }
 
-    .popular-item .popular-title{
-        font-size: 12px;  
-    }
-    
-    .popular-item .popular-browse{
+    .popular-item .popular-title {
         font-size: 12px;
     }
+
+    .popular-item .popular-browse {
+        font-size: 12px;
+    }
+
+
+    #slider-text {
+        font-size: 25px;
+        letter-spacing: 1.3px;
+    }
+    
 }
 
 /* Small screens (max-width: 767px) end*/
