--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@
     line-height: 50px;
     letter-spacing: 0.6px;
     font-weight: 400;
-    font-family: Roboto, sans-serif;
+    font-family: "Roboto", sans-serif;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -79,10 +79,11 @@
     text-decoration: none;
     font-size: 14px;
     border-radius: 20px;
-    font-weight: 200;
     word-spacing: 4px;
     letter-spacing: 5px;
     transition: background-color 0.3s;
+    font-family: 'Montserrat', sans-serif;
+    ;
 }
 
 .button:hover {
@@ -95,6 +96,7 @@
     width: 100%;
     position: absolute;
     top: 10%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .container {
@@ -159,6 +161,11 @@ nav ul li a {
     display: inline-flex;
     font-size: 14px;
     align-items: center;
+}
+
+.header .item-right {
+    font-weight: 200;
+    font-family: "Roboto", sans-serif;
 }
 
 #hamburger-icon {
@@ -242,6 +249,8 @@ nav ul li a {
 .horizontal-line {
     width: 100%;
     color: black;
+    height: 2px;
+    font-weight: bold;
 }
 
 
@@ -277,9 +286,11 @@ nav ul li a {
 }
 
 .disconunt-container .left-div p {
-    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
     letter-spacing: 1.2px;
     word-spacing: 5px;
+    line-height: 25px;
 }
 
 
@@ -288,13 +299,15 @@ nav ul li a {
     background-color: black;
     color: white;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 14px;
     padding: 15px 20px;
     border-radius: 20px;
     font-weight: 200;
     word-spacing: 4px;
     letter-spacing: 5px;
+    letter-spacing: 1px;
     transition: background-color 0.3s;
+    text-align: center;
 }
 
 .visit-button:hover {
@@ -362,12 +375,13 @@ nav ul li a {
     display: flex;
     align-items: center;
     flex-direction: start;
-    padding: 25px;
+    padding: 20px;
 }
 
 .title-div p {
-    font-weight: bold;
-    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
 }
 
 .cart-container .description {
@@ -411,6 +425,7 @@ nav ul li a {
 .cart-container .cart button {
     width: 100%;
     margin-top: 10px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .cart-container .cup-container {
@@ -468,6 +483,7 @@ nav ul li a {
 }
 
 .detal-meta-data {
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -477,16 +493,20 @@ nav ul li a {
 .detal-meta-data h1 {
     font-size: large;
     letter-spacing: 1.2px;
+    font-weight: 500;
 }
 
 .detal-meta-data p {
-    font-size: medium;
+    font-size: 14px;
     letter-spacing: 1.2px;
+    line-height: 20px;
 }
 
 .firebelly p {
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: 1.2px;
-    font-size: 15px;
+    font-size: 12px;
+    font-weight: 600;
 }
 
 .firebelly h1 {
@@ -562,13 +582,15 @@ nav ul li a {
 }
 
 .left-desc {
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 20px 20px;
-    font-size: 21px;
+    font-size: 17px;
     text-align: start;
-    margin-top: 12px;
+    margin-top: 18px;
+    font-weight: 500;
 }
 
 
@@ -665,11 +687,13 @@ nav ul li a {
 }
 
 .popular-container {
+    font-family: 'Montserrat', sans-serif;
     width: 100%;
     height: auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 5px;
+
 }
 
 .popular-container .popular-item {
@@ -682,15 +706,15 @@ nav ul li a {
 
 .popular-container .popular-item:hover {
     border: 1px solid black;
-    background-color: rgb(193, 219, 66);
+    background-color: rgb(207, 222, 140);
 }
 
 .popular-item .popular-title {
     width: 100%;
-    font-size: 18px;
+    font-size: 15px;
     letter-spacing: 1.2px;
     word-spacing: 1.2px;
-    font-weight: bold;
+    font-weight: 600;
     text-align: start;
     padding: 10px 20px;
     background-color: white;
@@ -712,8 +736,10 @@ nav ul li a {
     text-align: center;
     padding: 10px;
     color: white;
+    font-size: 15px;
     letter-spacing: 1.2px;
     word-spacing: 1.2px;
+    font-weight: 400;
 }
 
 
@@ -750,6 +776,7 @@ nav ul li a {
 }
 
 #slider-text {
+    font-family: 'Montserrat', sans-serif;
     font-size: 35px;
 }
 
@@ -775,6 +802,73 @@ nav ul li a {
 /* slider title section  end*/
 
 
+/* video section start */
+.video-section {
+    width: 100%;
+    background-color: rgb(247, 245, 241);
+}
+
+.video-title {
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    ;
+}
+
+.video-title h3 {
+    font-size: 35px;
+    letter-spacing: 1.3px;
+    margin-bottom: 20px;
+}
+
+.video-title p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    letter-spacing: 1.1px;
+    margin-bottom: 20px;
+}
+
+.video-carousel-container {
+    width: 100%;
+    overflow-x: auto;
+    padding: 10px 45px;
+}
+
+.video-thumbnail-wrapper {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+
+}
+
+.video-thumbnail {
+    flex: 0 0 auto;
+    margin-right: 10px;
+    cursor: pointer;
+    width: 250px;
+    height: 430px;
+    overflow: hidden;
+}
+
+.video-thumbnail img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.video {
+    width: 250px;
+    height: 430px;
+    object-fit: contain;
+}
+
+/* video section end */
+
+
+
 /* image section */
 
 .imagesection {
@@ -784,6 +878,7 @@ nav ul li a {
     flex-direction: column;
     justify-content: center;
     background-color: rgb(247, 245, 241);
+    font-family: 'Montserrat', sans-serif;
 }
 
 #imageSection {
@@ -801,12 +896,18 @@ nav ul li a {
     height: 100px;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 8px;
 }
 
 .imagesection .imageDIVSection .imgContainer {
     width: 60px;
     width: 60px;
+}
+
+.imageDIVSection .titleContainer {
+    font-size: 15px;
+    text-align: start;
+    font-weight: 600;
 }
 
 .imagesection .imageDIVSection .imgContainer img {
@@ -831,13 +932,12 @@ footer {
 .main-footer {
     width: 100%;
     display: flex;
-    gap: 30px;
 }
 
 .main-footer .footer-container {
     width: 60%;
     display: flex;
-    justify-content: space-between;
+    gap: 15%;
 }
 
 
@@ -855,10 +955,12 @@ footer {
 }
 
 .footer-section ul li {
+    font-family: 'Montserrat', sans-serif;
     list-style-type: none;
     margin-top: 10px;
-    letter-spacing: 1.2px;
-    font-weight: 400;
+    font-weight: 500;
+    letter-spacing: 1.1px;
+    font-size: 12px;
 }
 
 .footer-email h4 {
@@ -868,7 +970,7 @@ footer {
 
 
 .footer-email .email-container {
-    width: 350px;
+    width: 400px;
     border: 1px solid black;
     height: 60px;
     display: flex;
@@ -880,14 +982,15 @@ footer {
 }
 
 .footer-email .email-container input {
-    width: 70%;
+    width: 65%;
     height: 100%;
     border: none;
     padding-left: 20px;
+    background-color: rgb(247, 245, 241);
 }
 
 .footer-email .email-container button {
-    width: 30%;
+    width: 35%;
     height: 100%;
     background-color: black;
     color: rgb(194, 185, 176);
@@ -895,12 +998,18 @@ footer {
     letter-spacing: 1.2px;
 }
 
-
+.footer-email .email-container button:hover {
+    background-color: rgb(61, 57, 57);
+}
 
 .footer-end {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
     width: 40%;
     display: flex;
     justify-content: space-between;
+    margin-top: 80px;
 }
 
 /* footer end */
